delete and view booking